src/objects/RMAv2__c.object
<CustomObject>
    <fields>
        <fullName>rmaOverrideOnsiteArrivalCountry__c</fullName>
        <label>Override Onsite Arrival Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOverrideOnsiteArrivalPostalCode__c</fullName>
        <label>Override Onsite Arrival Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideOnsiteArrivalState__c</fullName>
        <label>Override Onsite Arrival State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideOnsiteArrivalStreet1__c</fullName>
        <label>Override Onsite Arrival Street1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideOnsiteArrivalStreet2__c</fullName>
        <label>Override Onsite Arrival Street2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideOnsiteCheckInCode__c</fullName>
        <label>Override Onsite Check-In Code</label>
        <picklist>
            <picklistValues>
                <fullName>CHECK-IN-10: FE must check in upon arrival</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO-CHECK-IN-10: FE does not need to check in upon arrival</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOverrideOnsiteCheckInNotes__c</fullName>
        <label>Override Onsite Check-In Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideOnsitePartDispositionCode__c</fullName>
        <label>Override Onsite Part Disposition Code</label>
        <picklist>
            <picklistValues>
                <fullName>LEAVE-PART-10: FE must leave old part at site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEAVE-WITH-PART-10: FE must leave with part and ship it back</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOverrideOnsitePartDispositionNotes__c</fullName>
        <label>Override Onsite Part Disposition Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideOnsitePartHandoverCode__c</fullName>
        <label>Override Onsite Part Handover Code</label>
        <picklist>
            <picklistValues>
                <fullName>MANNED-10: Part courier must leave part with somebody at site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNMANNED-10: Part courier must hand over part directly to FE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOverrideOnsitePartHandoverNotes__c</fullName>
        <label>Override Onsite Part Handover Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideOnsiteSchedulingCode__c</fullName>
        <label>Override Onsite Scheduling Code</label>
        <picklist>
            <picklistValues>
                <fullName>WITHIN-4-HOURS-10: Schedule within the next 4 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCHEDULED-10: Schedule according to the Scheduling Notes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOverrideOnsiteSchedulingNotes__c</fullName>
        <label>Override Onsite Scheduling Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideShipmentAccountName__c</fullName>
        <label>Override Shipment Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideShipmentAttn__c</fullName>
        <label>Override Shipment Attn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideShipmentCity__c</fullName>
        <label>Override Shipment City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideShipmentCountry__c</fullName>
        <label>Override Shipment Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaOverrideShipmentEmail__c</fullName>
        <label>Override Shipment Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rmaOverrideShipmentPhone__c</fullName>
        <label>Override Shipment Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideShipmentPostalCode__c</fullName>
        <label>Override Shipment Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideShipmentState__c</fullName>
        <label>Override Shipment State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideShipmentStreet1__c</fullName>
        <label>Override Shipment Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaOverrideShipmentStreet2__c</fullName>
        <label>Override Shipment Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaPartFailedWithinOpsTimePeriod__c</fullName>
        <description>Returns &quot;Yes&quot; if the part failed within Operations&apos; designated time period.  Returns &quot;No&quot; otherwise.</description>
        <formula>IF(ISBLANK(rmaOutgoingShipmentDateTimeOpened__c),
   IF(OR(AND(ISBLANK(rmaDiskShelfAsset__c),
             NOT(ISBLANK(rmaCaseNumber__r.Asset.Ship_Date__c)),
             (TODAY() - rmaCaseNumber__r.Asset.Ship_Date__c &lt;= 90)),
         AND(NOT(ISBLANK(rmaDiskShelfAsset__c)),
             NOT(ISBLANK(rmaDiskShelfAsset__r.Ship_Date__c)),
             (TODAY() - rmaDiskShelfAsset__r.Ship_Date__c &lt;= 90))),
      &quot;Yes&quot;,
      &quot;No&quot;),
   IF(OR(AND(ISBLANK(rmaDiskShelfAsset__c),
             NOT(ISBLANK(rmaCaseNumber__r.Asset.Ship_Date__c)),
             (DATEVALUE(rmaOutgoingShipmentDateTimeOpened__c) - rmaCaseNumber__r.Asset.Ship_Date__c &lt;= 90)),
         AND(NOT(ISBLANK(rmaDiskShelfAsset__c)),
             NOT(ISBLANK(rmaDiskShelfAsset__r.Ship_Date__c)),
             (DATEVALUE(rmaOutgoingShipmentDateTimeOpened__c) - rmaDiskShelfAsset__r.Ship_Date__c &lt;= 90))),
      &quot;Yes&quot;,
      &quot;No&quot;))</formula>
        <label>Part Failed Within Ops Time Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaPartIsAShipOnlyPart__c</fullName>
        <description>Returns &quot;Yes&quot; if the part is a ship-only part.  Returns &quot;No&quot; otherwise.</description>
        <formula>IF(OR(ISPICKVAL(rmaComponent__c, &quot;BEZEL&quot;),
      ISPICKVAL(rmaComponent__c, &quot;CABLE&quot;),
      ISPICKVAL(rmaComponent__c, &quot;CORD (power cord)&quot;),
      ISPICKVAL(rmaComponent__c, &quot;DONGLE&quot;),
      ISPICKVAL(rmaComponent__c, &quot;RAILS&quot;)),
   &quot;Yes&quot;,
   &quot;No&quot;)</formula>
        <label>Part Is A Ship Only Part</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaPartNumber__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaPart__c</fullName>
        <label>Part</label>
        <picklist>
            <controllingField>rmaModel__c</controllingField>
            <picklistValues>
                <fullName>BEZEL: CS series bezel (SR-Bezel-CS-series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEZEL: ES series bezel (SR-Bezel-ES-series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABLE: ES1 series 1-meter single HD-SAS cable [SR-HD-SASCABLE-1M]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABLE: ES1 series 1-meter single SAS cable [SR-SASCABLE-1M]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABLE: ES1 series 3-meter single HD-SAS cable [SR-HD-SASCABLE-3M]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABLE: ES1 series 3-meter single SAS cable [SR-SASCABLE-3M]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: CS210 complete chassis, but without disks (SR-CHA-210)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: CS220/240/260 (non-G) complete chassis, but without disks (SR-CHA-200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: CS220G/240G/260G complete chassis, but without disks (SR-CHA-200G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: CS420/440/460 (non-G) complete chassis, but without disks (SR-CHA-400)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: CS420G/440G/460G complete chassis, but without disks (SR-CHA-400G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: ES series (disk shelf) complete chassis, but without disks (SR-CHA-ES)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHASSIS: CS210TJ chassis [SR-CHASSIS-3U-TJ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHASSIS: X8 chassis [SR-Chassis-3U-SMC]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHASSIS: X9 chassis [SR-CHASSIS-3U-X9]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-SPEC: CS210 controller (SR-CONT-CS210)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-SPEC: CS220/240/260 (non-G) controller (SR-CONT-CS220)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-SPEC: CS220G/240G/260G controller (SR-CONT-CS220G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-SPEC: CS420/440/460 (non-G) controller (SR-CONT-CS400)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-SPEC: CS420G/440G/460G controller (SR-CONT-CS400G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS210 controller [SR-CONT-CS210]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS215 controller w/ 2 total 10GbE RJ45 ports [SR-CONT-CS215-2T]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS215 controller w/ 2 total 10GbE SFP+ ports [SR-CONT-CS215-2P]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS215 controller w/ 2 total 1GbE ports [SR-CONT-CS215-2G]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS215 controller w/ 4 total 1GbE ports [SR-CONT-CS215-4G]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS220/240/260 (non-G) controller [SR-CONT-CS220]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS220G/240G/260G controller [SR-CONT-CS220G]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS235 controller [SR-CONT-L]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS300 controller [SR-CONT-CS300]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT-STD: CS420/440/460 (non-G) controller [SR-CONT-CS400]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaQuantity__c</fullName>
        <label>Quantity</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaRcaCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RCA Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rmaReason__c</fullName>
        <label>Reason</label>
        <picklist>
            <controllingField>rmaComponent__c</controllingField>
            <picklistValues>
                <fullName>CHASSIS: Bad controller slot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHASSIS: Bad disk slot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHASSIS: Bad LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHASSIS: Bad power supply slot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: 1Gb NIC failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: 10Gb NIC failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: Bad controller slot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: Bad disk slot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: Bad LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: Bad power supply slot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: Fan failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: NVRAM failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: NVRAM MBE (multi bit error)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: NVRAM SBE (single bit error)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: Power on failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: RAM failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: Reboot loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHA_NODISK: USB failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete system DOA (dead on arrival)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT: Fan failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT: 1Gb NIC failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT: 10Gb NIC failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT: Intermittent failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT: NVRAM failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT: NVRAM MBE (multi bit error)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT: NVRAM SBE (single bit error)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT: Power on failure no console</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT: Power on failure no VGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT: RAM failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONT: Reboot loop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaRetShip2Carrier__c</fullName>
        <label>Ret. Ship2 Carrier</label>
        <picklist>
            <picklistValues>
                <fullName>Aeronet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expeditors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash Global Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mach 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TopCargo Co., Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yamato Global Express Co., Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yamato Transport Co., Ltd</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaRetShip2DateTimeDelivered__c</fullName>
        <label>Ret. Ship2 Date/Time Delivered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaRetShip2DateTimeEta__c</fullName>
        <label>Ret. Ship2 Date/Time ETA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaRetShip2DateTimeShipped__c</fullName>
        <label>Ret. Ship2 Date/Time Shipped</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaRetShip2SignedForBy__c</fullName>
        <label>Ret. Ship2 Signed For By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaRetShip2Status__c</fullName>
        <label>Ret. Ship2 Status</label>
        <picklist>
            <picklistValues>
                <fullName>DRAFT-10: Waiting to order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPEN-20: Waiting for shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPEN-30: Shipped, waiting for delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED-10: Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED-20: Part lost by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED-30: Part lost in shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED-40: Customer has &quot;no return&quot; service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED-50: Customer unable/unwilling to return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANCELED-10: Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A-10: No part to ship for this RMA Type</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaRetShip2TrackingNumber__c</fullName>
        <label>Ret. Ship2 Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaRetShipDateTimeDelivered__c</fullName>
        <label>Ret. Ship. Date/Time Delivered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaRetShipProviderOrderNumber__c</fullName>
        <label>Ret. Ship. Provider Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaRetShipSignedForBy__c</fullName>
        <label>Ret. Ship. Signed For By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaReturnShipmentCarrier__c</fullName>
        <label>Return Shipment Carrier</label>
        <picklist>
            <picklistValues>
                <fullName>Aeronet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expeditors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash Global Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand delivered (no carrier)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mach 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (put detail in notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purolator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TopCargo Co., Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yamato Global Express Co., Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yamato Transport Co., Ltd</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaReturnShipmentChassisSn__c</fullName>
        <label>Return Shipment Chassis SN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaReturnShipmentDateDelivered__c</fullName>
        <label>Return Shipment Date Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rmaReturnShipmentDateEta__c</fullName>
        <label>Return Shipment Date ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rmaReturnShipmentDateShipped__c</fullName>
        <label>Return Shipment Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rmaReturnShipmentDateTimeCanceled__c</fullName>
        <label>Return Shipment Date/Time Canceled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaReturnShipmentDateTimeClosed__c</fullName>
        <label>Return Shipment Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaReturnShipmentDateTimeOpened__c</fullName>
        <label>Return Shipment Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rmaReturnShipmentNotes__c</fullName>
        <label>Return Shipment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rmaReturnShipmentStatusShort__c</fullName>
        <formula>IF(BEGINS(TEXT(rmaReturnShipmentStatus__c), &quot;DRAFT&quot;), &quot;Draft&quot;,
IF(BEGINS(TEXT(rmaReturnShipmentStatus__c), &quot;OPEN&quot;), &quot;Open&quot;,
IF(BEGINS(TEXT(rmaReturnShipmentStatus__c), &quot;CLOSED&quot;), &quot;Closed&quot;,
IF(BEGINS(TEXT(rmaReturnShipmentStatus__c), &quot;CANCELED&quot;), &quot;Canceled&quot;,
IF(BEGINS(TEXT(rmaReturnShipmentStatus__c), &quot;N/A&quot;), &quot;N/A&quot;, &quot;&quot;)))))</formula>
        <label>Return Shipment Status Short</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaReturnShipmentStatus__c</fullName>
        <label>Return Shipment Status</label>
        <picklist>
            <controllingField>rmaType__c</controllingField>
            <picklistValues>
                <fullName>DRAFT-10: Waiting to order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPEN-10: Ordered, waiting for confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPEN-20: Order confirmed, waiting for shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPEN-30: Shipped, waiting for delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED-10: Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED-20: Part lost by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED-30: Part lost in shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED-40: Customer has &quot;no return&quot; service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED-50: Customer unable/unwilling to return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANCELED-10: Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A-10: No part to ship for this RMA Type</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rmaReturnShipmentTimeDelivered__c</fullName>
        <label>Return Shipment Time Delivered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaReturnShipmentTimeEta__c</fullName>
        <label>Return Shipment Time ETA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rmaReturnShipmentTimeShipped__c</fullName>
        <label>Return Shipment Time Shipped</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>